fixed size of project logos on mobile

--- a/assets/styles/style.sass
+++ b/assets/styles/style.sass
@@ -8,8 +8,11 @@
 
 @media (max-width: 768px)
   figure.image
-    margin-left: 0
-    margin-right: 0
+    margin: 0 auto
+    width: 80%
+
+  .image.is-square
+    padding-top: 80%
 
 .youtube-container
   position: relative
